# Toniator

./: .gitignore  BuildScriptLog.txt  Cargo.toml  ISSUES.md  README.md  index.html  package.json  pushToGithub.sh  styles.css  vite.config.js
desktop/: Cargo.toml  README.md
desktop/src/: curve_render.rs  lib.rs  main.rs  model.rs  persistence.rs  png_export.rs  preset.rs  render.rs  svg_export.rs  ui.rs
desktop/test-artifacts/: chunky-curve-document.toniator  comic-book-document.toniator  correction-curved.tntr  correction-curved.toniator  correction-soft-wave.toniator  correction-wheel-check.txt  correction-zoom-225.txt  correction2-curved.toniator  correction2-fit.txt  correction2-preview-resolution-check.txt  correction2-soft-wave.toniator  correction2-zoom-800.txt  default-curves-document.toniator  demo-document.toniator  followon-aspect-tall.toniator  followon-aspect-tall.txt  followon-aspect-wide-legacy-preset.toniator  followon-aspect-wide-legacy-preset.txt  followon-crosshatch.toniator  followon-shapes-independent.tntr  followon-shapes-independent.toniator  followon-shapes-shared.tntr  followon-shapes-shared.toniator  followon-shapes-shared.txt  followon-source-view.txt  followon2-crosshatch.tntr  followon2-crosshatch.toniator  followon2-migrated-dirty-input.toniator  followon2-migrated-saved.toniator  followon2-migration-report.txt  followon2-new-guard-matrix.txt  followon2-verification.txt  followon3-crosshatch-verification.txt  followon3-crosshatch.toniator  followon3-new-guard-report.txt  indicator-active.txt  indicator-rendered.txt  indicator-source.txt  (+26 more)
(+45 files in other folders)
